--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.0.3
-numpy==1.21.4
-opencv-python==4.5.4.60
-mediapipe==0.8.9
-pycaw==2021.1.5
+Flask
+numpy
+opencv-python
+mediapipe
+pycaw
